[package]
name = "torsten-storage"
version.workspace = true
edition.workspace = true
description = "Block and chain storage for Torsten (unified LSM-tree with snapshot/rollback)"

[features]
default = []
io-uring = ["cardano-lsm/io-uring"]

[dependencies]
torsten-primitives = { workspace = true }
torsten-serialization = { workspace = true }
torsten-crypto = { workspace = true }
cardano-lsm = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crc32fast = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
