[package]
name = "torsten-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI dashboard for the Torsten Cardano node"

[[bin]]
name = "torsten-tui"
path = "src/main.rs"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
