[package]
name = "dugite-conformance"
version.workspace = true
edition.workspace = true
description = "Formal ledger specification conformance tests for Dugite"

[dependencies]
dugite-primitives = { workspace = true }
dugite-crypto = { workspace = true }
dugite-serialization = { workspace = true }
dugite-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
