[package]
name = "torsten-golden-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "golden_tests"
path = "tests/golden_tests.rs"

[dependencies]
torsten-crypto = { path = "../../crates/torsten-crypto" }
torsten-network = { path = "../../crates/torsten-network" }
torsten-primitives = { path = "../../crates/torsten-primitives" }
hex = "0.4"
minicbor = { workspace = true }
